gcc/testsuite/algol68/compile/error-label-after-decl-1.a68
# { dg-options "-fstropping=upper" }  #

BEGIN GOTO end;
      ASSERT(FALSE);
end:  0;
      INT i = 10; # { dg-error "declaration cannot follow" }  #
      i
END
